--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/curve-line-chart.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
