--- a/pom.xml
+++ b/pom.xml
@@ -148,5 +148,12 @@
 			<artifactId>twilio</artifactId>
 			<version>8.22.1</version>
 		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.23.1</version>
+		</dependency>
 	</dependencies>
 </project>
