--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/curve-line-chart.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
